feat(api): add guild endpoint
